--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:debug": "cross-env VITE_DEBUG=1 vite",
+    "dev:no-debug": "cross-env VITE_DEBUG=0 vite",
     "build": "vite build",
+    "build:debug": "cross-env VITE_DEBUG=1 vite build",
+    "build:prod": "cross-env VITE_DEBUG=0 vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -23,6 +27,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "cross-env": "^10.0.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
